--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,9 @@ settings:
   max-tokens: 150
   temperature: 0.7
   timeout: 30 # Timeout in seconds for API requests
+
+# Proxy Settings
+proxy:
+  enabled: true # 是否启用代理
+  host: "127.0.0.1" # 代理服务器地址
+  port: 7897 # 代理服务器端口
